# FuzzyLogic

./: .gitignore  CMakeLists.txt  README.md
include/: FuzzyLogic.h  FuzzyRules.h  FuzzySet.h  main.h
src/: main.cpp
